[package]
name = "paperswithcode-client"
version = "0.1.1"
edition = "2021"
authors = [
	"Andre Chang, <andbe.code@gmail.com>",
]
description = "A Rust library for `paperswithcode-client` api"
homepage = "https://github.com/Andrechang/paperswithcode-client"
repository = "https://github.com/Andrechang/paperswithcode-client"
documentation = "https://github.com/Andrechang/paperswithcode-client"
readme = "README.md"
license = "Apache-2.0"
rust-version = "1.80.1"
keywords = ["paperswithcode-api", "paperswithcode", "sota", "state-of-the-art", "papers"]
categories = ["parsing", "text-processing", "web-programming::http-client", "web-programming", "api-bindings"]
exclude = [
	".gitignore",
	".github",
	".vscode",
	"package.json",
	"package-lock.json",
]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
